fix: wrap dropdown menu header on small screen

--- a/assets/hb/modules/header/scss/_header.scss
+++ b/assets/hb/modules/header/scss/_header.scss
@@ -97,6 +97,13 @@ $hb-header-logo-bg: null !default;
     }
 }
 
+
+@include media-breakpoint-down($hb-header-breakpoint) {
+    .dropdown-header {
+        text-wrap: wrap;
+    }
+}
+
 .column-span-all {
     column-span: all;
 }
